samples/_failures_safe/1761189352_894a09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd8f0fd3.c: In function ‘main’:
./samples/SAFE/__tmp_dd8f0fd3.c:125:5: error: expected expression at end of input
  125 |     int cols2 = read_int("Enter columns for matrix 2: ",
      |     ^~~
./samples/SAFE/__tmp_dd8f0fd3.c:125:17: error: too few arguments to function ‘read_int’
  125 |     int cols2 = read_int("Enter columns for matrix 2: ",
      |                 ^~~~~~~~
./samples/SAFE/__tmp_dd8f0fd3.c:76:5: note: declared here
   76 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_dd8f0fd3.c:125:5: error: expected declaration or statement at end of input
  125 |     int cols2 = read_int("Enter columns for matrix 2: ",
      |     ^~~
